resolved blockquote after alignment

--- a/_sass/_blocks.scss
+++ b/_sass/_blocks.scss
@@ -1217,21 +1217,42 @@ blockquote {
   line-height: 1.3em;
   margin: 20px auto;
   font-size: 2em;
+  font-weight: bold;
   }
 
 .join-text {
-    @include mq($until: mobile) {
-      font-size: 50%;
-    }
-    @include mq($from: mobile, $until: tablet) {
-      font-size: 35%;
-    }
-    @include mq($from: desktop, $until: wide) {
-      font-size: 65%;
-    }
-    @include mq(1440px) {
-      font-size: 90%;
-    }
+  @include mq(360px) {
+    font-size: 50%;
+  }
+  @include mq(375px) {
+    font-size: 50%;
+  }
+  @include mq(411px) {
+    font-size: 50%;
+  }
+  @include mq(540px) {
+    font-size: 60%;
+  }
+  @include mq(768px) {
+  padding-top: 10px;
+  font-size: 40%;
+  }
+  @include mq(1280px) {
+  padding-top: 20px;
+  font-size: 80%;
+  }
+  @include mq(1366px) {
+  padding-top: 25px;
+  font-size: 85%;
+  }
+  @include mq(1440px) {
+  padding-top: 30px;
+  font-size: 90%;
+  }
+  @include mq(1920px) {
+  padding-top: 30px;
+  font-size: 120%;
+  }
 }
   
 blockquote:before { 
@@ -1243,6 +1264,49 @@ blockquote:before {
   display: block;
   left: 30px;
   top: 40px;
+
+  @include mq(360px) {
+    font-size: 95%;
+    left: 45px;
+    top: 30px;
+  }
+  @include mq(375px) {
+    font-size: 95%;
+    left: 50px;
+    top: 30px;
+  }
+  @include mq(411px) {
+    left: 50px;
+    top: 30px;
+  }
+  @include mq(540px) {
+    left: 65px;
+    top: 30px;
+  }
+  @include mq(768px) {
+    left: 50px;
+    top: 40px;
+  }
+  @include mq(1280px) {
+    font-size: 110%;
+    left: 75px;
+    top: 50px;
+  }
+  @include mq(1366px) {
+    font-size: 110%;
+    left: 75px;
+    top: 55px;
+  }
+  @include mq(1440px) {
+    font-size: 120%;
+    left: 80px;
+    top: 60px;
+  }
+  @include mq(1920px) {
+    font-size: 140%;
+    left: 100px;
+    top: 60px;
+  }
 }
 
 blockquote:after { 
@@ -1296,19 +1360,6 @@ blockquote:after {
       bottom: 40px;
     }
   }
-
-  @include mq(tablet, desktop) {
-    padding-left: 18px;
-    padding-top: 0;
-    padding-bottom: 0px;
-  }
-
-  @include mq(tablet) {
-  }
-
-  @include mq(1024) {
-  }
-
 
 .text-box {
   position: relative;
